[tool.poetry]
name = "destiny2project"
version = "0.1.0"
description = ""
authors = ["Oliver Newcombe <oliver.newcombe@jesus.ox.ac.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2"
requests = "^2.32.3"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"